# bilibili_live_tool

./: .gitignore  AGENTS.md  README.md  build.bat  config.json.bak  main.py  main_cli.py  main_gui.py  pyproject.toml
cli/: bili_cli.py  bili_lib.py  build.py  constant.py  main.py
docs/: architecture-spec.md  development-standards.md  project-overview.md
new_src/: api.py  config.py  constant.py  data.py  error.py  lib.py
plan/: architecture-spec.md  development-standards.md  logic-layer-design-spec.md  project-overview.md  requirements-summary.md  tui-layer-design-spec.md
src/: BiliLiveTool.py  __init__.py  __main__.py  bili.py  bili_cli.py  bili_lib.py  build.py  constant.py  lib.py  main.py  utils.py
src/cli/: __init__.py  __main__.py  auth.py  danmaku.py  live.py  main.py
src/core/: __init__.py  auth.py  config.py  danmaku_fetcher.py  danmaku_handler.py  danmaku_wbi.py
src/logic/: __init__.py  auth.py  danmaku.py  live.py  session.py
src/tui/: __init__.py  __main__.py  app.py  app.tcss  main.py
src/ui/: app.py
src/utils/: __init__.py  api.py  cleanup.py  config.py  constant.py  constants.py  data.py  error.py  lib.py
tui/: __init__.py  build.py  error.py  main.py
tui/app/: __init__.py  main.py
tui/core/: __init__.py  auth.py  config.py  danmaku_fetcher.py  danmaku_handler.py  danmaku_models.py  danmaku_protocol.py  danmaku_wbi.py  live.py
tui/docs/: README_STRUCTURE.md
tui/ui/: __init__.py  app.py
tui/utils/: __init__.py  cleanup.py  (+4 more)
unittest/: all_test.py  test.json  test_bili_lib.py  test_lib.py  test_src_api.py  test_src_logic.py
(+68 files in other folders)
