[project]
name = "bili_live_tool"
version = "0.4.3"
description = "a simple tool to start or stop bilibili live and get stream code."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "qrcode>=8.2",
    "requests>=2.32.3",
]

[dependency-groups]
cli = [
    "keyboard>=0.13.5",
    "image>=1.5.33",
    "pypinyin>=0.55.0",
]
dev = [
    "pyinstaller>=6.14.0",
]
tui = [
    "textual>=7.3.0",
    "aiohttp>=3.9.0",
    "brotli>=1.2.0",
]

[tool.uv]
default-groups = ["cli", "tui"]
