[project]
name = "bili_live_tool"
version = "0.4.5"
description = "a simple tool to start or stop bilibili live and get stream code."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "qrcode>=8.2",
    "requests>=2.32.3",
    "brotli>=1.2.0",
    "textual>=7.3.0",
    "websockets>=15.0.1",
]

[dependency-groups]
build = [
    "pyinstaller>=6.14.0",
]

[tool.uv]
default-groups = []
